fix(slickgrid): avoid layout problem when shrinking height of the module set max-width of flex container to 100%
Fix #648

--- a/src/modules/types/edition/slick_grid/style.css
+++ b/src/modules/types/edition/slick_grid/style.css
@@ -469,6 +469,7 @@ classes should alter those!
     display: -webkit-flex;
     display: flex;
     min-height: 100%;
+    max-height: 100%;
     -webkit-flex-direction: column;
     flex-direction: column;
     width: 100%;
